--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Firebase1">
-        <activity android:name=".BuyActivity"></activity>
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".StorageItemActivity"></activity>
+        <activity android:name=".StorageActivity" />
+        <activity android:name=".BuyActivity" />
         <activity android:name=".SellActivity" />
         <activity android:name=".GoodsActivity" />
         <activity android:name=".ItemActivity" />
