--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".StorageItemActivity"></activity>
+        <activity android:name=".DatePickerActivity"></activity>
+        <activity android:name=".StorageItemActivity" />
         <activity android:name=".StorageActivity" />
         <activity android:name=".BuyActivity" />
         <activity android:name=".SellActivity" />
